[package]
name = "minskatt"
version = "0.0.1"
publish = false
license-file = "../LICENSE"
authors = ["Leandro Ostera <leandro@ostera.io>"]
edition = "2018"

build = "build.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
time = "0.2.22"
fern = { version = "0.6", features = [ "colored" ] }
lalrpop-util = "0.19"
log = "0.4"
regex = "1"
structopt = "0.3"
wasm-bindgen = "0.2"

[build-dependencies]
lalrpop = { version="0.19", features=["lexer"] }

[lib]
crate-type = ["cdylib", "rlib"]
